WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304438
[GTK][WPE] Fix clang builds after
304678@main
https://bugs.webkit.org/show_bug.cgi?id=304438
Summary
[GTK][WPE] Fix clang builds after 304678@main
Nikolas Zimmermann
Reported
2025-12-18 14:03:48 PST
Wrap Skia includes in WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE_BEGIN / WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE_END block to fix the clang build.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2025-12-18 14:04:31 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55652
EWS
Comment 2
2025-12-18 14:07:07 PST
Committed
304704@main
(3406d8e09d2b): <
https://commits.webkit.org/304704@main
> Reviewed commits have been landed. Closing PR #55652 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug