[GTK][WPE] Fix clang builds after 304678@main https://bugs.webkit.org/show_bug.cgi?id=304438

Unreviewed build fix.

Wrap Skia includes in WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE_BEGIN /
WTF_IGNORE_WARNINGS_IN_THIRD_PARTY_CODE_END block to fix the clang
build.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:

Canonical link: https://commits.webkit.org/304704@main